<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="26sp"
        android:text="@string/dashboard_title"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_horiizontal" />

    <ImageView
        android:id="@+id/iv_dokter_gambar"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:src="@drawable/dokter_gambar"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/shape_biru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_blue"
        app:layout_constraintTop_toBottomOf="@+id/iv_dokter_gambar" />

    <Button
        android:id="@+id/btn_consult_chatbot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/chatbot_consult"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/guide_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_consult_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_consult"
        android:fontFamily="@font/poppins_bold"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_consult_chatbot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_consult"
        android:fontFamily="@font/poppins_bold"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_consult_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:fontFamily="@font/poppins_bold"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horiizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

</androidx.constraintlayout.widget.ConstraintLayout>